done three Pillars Lab

--- a/index.html
+++ b/index.html
@@ -67,5 +67,5 @@
       </footer>
     </article>
   </body>
-  <script src="demo.js" charset="utf-8"></script>
+  <script src="C:\Users\HT\Desktop\Developers\PreWork_2\phase-1-stitching-together-the-three-pillars\demo.js" charset="utf-8"></script>
 </html>
